# go_dev_service

./: .gitignore  Makefile  README.md  WORKSPACE
cfn/: template.py
go-lambda/: BUILD.bazel  main.go
